# git-naming-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
git_naming_hooks/: check-git-branch.py  check-git-commit.py  check_git_branch.py  check_git_commit.py
