[tool.poetry]
name = "git-naming-hooks"
version = "0.1.0"
description = ""
authors = ["Shitikov Kirill <k.shytikov@redgenn.com>"]
readme = "README.md"
exclude = ["tests"]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
